# Blakecoin

./: .gitignore  15-2-segwith.md  Makefile.am  README.md  build.sh  configure  configure.ac  mainnet-carryback-audit-2026-04-18.md
contrib/devtools/: README.md  gen-blakecoin-conf.sh  gen-manpages.py
contrib/guix/: guix-build
contrib/init/: blakecoind.conf  blakecoind.init  blakecoind.openrc  blakecoind.openrcconf  blakecoind.service  org.bitcoin.bitcoind.plist  org.blakecoin.blakecoind.plist
contrib/linearize/: example-linearize.cfg
contrib/linux-release/: blakecoin-qt-launcher.c
contrib/macdeploy/: detached-sig-create.sh  macdeployqtplus
contrib/rpm/: bitcoin.spec
contrib/tracing/: log_utxocache_flush.py  mempool_monitor.py
contrib/verify-binaries/: verify.py
doc/: Doxyfile.in  README.md  README_windows.txt  build-osx.md  init.md
doc/man/: Makefile.am  blakecoin-cli.1  blakecoin-qt.1  blakecoin-tx.1  blakecoin-util.1  blakecoin-wallet.1  blakecoind.1
doc/policy/: README.md
electrum/: coin.env
share/: setup.nsi.in
share/examples/: blakecoin.conf
share/pixmaps/: bitcoin128.xpm  bitcoin16.xpm  bitcoin256.xpm  bitcoin32.xpm  bitcoin64.xpm
src/: Makefile.am  Makefile.in  Makefile.qt.include  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-util-res.rc  bitcoin-util.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chainparams.cpp  chainparamsbase.cpp  chainparamsseeds.h  clientversion.cpp  clientversion.h  init.cpp  key.cpp  net.cpp  pow.cpp  validation.cpp  validation.h
(+165 files in other folders)
